# Kokoro-Clipboard-TTS

./: .gitignore  README.md  RELEASE_TESTING.md  index.html  package-lock.json  package.json  requirements.txt  scale_icon.js  vite.config.ts
.agent/: CONTRIBUTING.md  maintenance_notes.md
.github/workflows/: release.yml
scripts/: build_local_sidecar.py
sidecar/: kokoro_server.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: lib.rs  sidecar.rs
src/components/: FloatingWidget.tsx  SettingsWindow.tsx  Splash.tsx  Tutorial.tsx
src/utils/: textCleaner.test.ts  textCleaner.ts
